# Tetris_Game_Project_IN204

./: Main.cpp  Makefile  README.md  TETRIC.out  TETRIS_3D  config.inl  display.cpp  display.hpp  logic.cpp  logic.hpp  main.cpp  main1,0.cpp  main1_0.out  pixel.cpp  pixel.hpp  test  testnew.cpp  tetris  tetromino.cpp  tetromino.hpp
3DTetris/: Makefile  README.md  a.out  gg.cpp  malek_bouaziz.cpp  test  test.cpp  tetris
3d-tetris/: CMakeLists.txt  README.md
3d-tetris/src/: main.cpp
3d-tetris/src/shaders/: fragment_shader.glsl  vertex_shader.glsl
3d-tetris/src/utils/: utils.cpp  utils.hpp
docs/: Documentation du Code TETRIS 3D.md
